--- a/src/componentes/Header/Header.css
+++ b/src/componentes/Header/Header.css
@@ -1,6 +1,5 @@
 .site-header {
   background: var(--Azuis-06, #0e1423);
-  padding: 1rem 2rem;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   display: flex;
   justify-content: center;
@@ -10,33 +9,32 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 100%;
-  max-width: 1400px;
+  width: 60%;
+  max-width: 1180px;
 }
 
 .logo-container {
   display: flex;
   align-items: center;
-  gap: 15px;
-  flex: 1;
+  gap: 10px;
   justify-content: flex-start;
 }
 
 .logo-img {
-  height: 50px;
-  width: 50px;
-  border-radius: 50%;
-  object-fit: cover;
+  width: 75px;
+  height: 75px;
+  filter: drop-shadow(0 4px 16px #ef9607);
 }
 
 .logo-title {
+  width: 120px;
   color: #fff;
   text-shadow: 0 4px 90px rgba(255, 255, 255, 0.25);
-  font-family: "Creative Vintage Regular";
-  font-size: 40px;
+  font-family: "Creative Vintage Regular BP";
+  font-size: 30px;
   font-style: normal;
-  font-weight: 400;
-  line-height: 36px;
+  font-weight: 600;
+  line-height: 26px;
   letter-spacing: -1px;
 }
 
@@ -45,52 +43,98 @@
   display: flex;
   justify-content: center;
   padding: 0 2rem;
+  position: relative;
 }
 
 .search-input {
   display: flex;
-  width: 855px;
-  height: 65px;
-  padding: 7.999px 32px 7.999px 23.996px;
+  width: 100%;
+  height: 40px;
+  padding: 5px 20px;
   justify-content: flex-end;
   align-items: center;
-  gap: 9.998px;
+  gap: 8px;
   border-radius: 10px;
   background: #fff;
+  position: relative;
 }
 
 .search-input::placeholder {
-  color: #8892b0;
+  color: #9c9c9c;
+  font-family: "Segoe UI";
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 100%;
 }
 
 .search-input:focus {
   border-color: #eaa64d;
-  box-shadow: 0 0 0 3px rgba(234, 166, 77, 0.25);
 }
 
 .search-button {
   display: none;
 }
 
-.nav-button-container {
-  flex: 1;
-  display: flex;
-  justify-content: flex-end;
-}
-
-.nav-button {
-  background-color: #eaa64d;
-  color: #0e1423;
-  border: none;
-  border-radius: 8px;
-  padding: 0.75rem 1.5rem;
-  font-size: 1rem;
-  font-weight: 600;
+.search-extra-icon {
+  margin-left: 8px;
   cursor: pointer;
-  transition: background-color 0.3s ease, transform 0.2s ease;
+  position: absolute;
+  right: 55px;
+  top: 20%;
 }
 
-.nav-button:hover {
-  background-color: #f0b068;
-  transform: translateY(-2px);
+.search-icon {
+  width: 26px;
+  height: 26px;
+  flex-shrink: 0;
+}
+
+.cart-button-pro {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 120px;
+  height: 44px;
+  padding: 14px 12px;
+  border-radius: 10px;
+  background: var(--Amarelos-01, #eaa64d);
+  box-shadow: 0 0 18px #eaa64d;
+}
+
+.cart-button-pro:hover {
+  transform: scale(1.05);
+  box-shadow: 0 0 25px rgba(247, 169, 59, 0.8);
+}
+
+/* O contêiner do ícone:*/
+.icon-container {
+  position: relative;
+}
+
+/* O ícone em si */
+.cart-icon {
+  width: 40px;
+  height: 40px;
+}
+
+/* A contagem de itens (o número "99") */
+.item-count {
+  position: absolute;
+  top: -5px;
+  right: -10px;
+  background-color: white;
+  color: #f7a93b;
+  border-radius: 7px;
+  padding: 1px 6px;
+  font-size: 12px;
+  font-weight: bold;
+}
+
+.cart-text {
+  color: #fff;
+  font-family: "Creative Vintage Regular";
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 400;
 }
