--- a/src/componentes/Footer/Footer.css
+++ b/src/componentes/Footer/Footer.css
@@ -1,3 +1,10 @@
+@font-face {
+  font-family: "Creative-Vintage";
+  src: url(/public/minhaFonte.ttf);
+  font-weight: 400;
+  font-style: normal;
+}
+
 .footer-container {
   background: linear-gradient(0deg, #0e1423 28.35%, #01040d 100%);
   width: 100%;
@@ -29,10 +36,10 @@
   align-items: center;
   gap: 10px;
   color: #fff;
-  font-family: "Creative Vintage Regular";
+  font-family: "Creative-Vintage";
   font-size: 56px;
   font-style: normal;
-  font-weight: 600;
+  font-weight: 400;
   line-height: 100%;
 }
 
@@ -43,6 +50,17 @@
   font-style: normal;
   font-weight: 600;
   line-height: 100%;
+  text-decoration: none;
+  transition: color 0.3s ease;
+}
+
+.about-us:hover {
+  color: #ffffff;
+  cursor: pointer;
+}
+
+.about-us:active {
+  color: #a7d4fa;
 }
 
 .footer-column-group {
